[package]
name = "refined_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
azalea = { version = "0.7.0", git = "https://github.com/mat-1/azalea/" }
azalea-core = { version = "0.7.0", git = "https://github.com/mat-1/azalea/" }
azalea-inventory = { version = "0.7.0", git = "https://github.com/mat-1/azalea/" }
dotenv = "0.15.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
hematite-nbt = "0.5.2"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio-tungstenite = "0.20.0"
toml = "0.7.6"
serde = "1.0.181"
lazy_static = "1.4.0"
